Correct errors (parain->parrain) and fix border-radius propagation to children with overflow: hidden

--- a/static/css/campus/base.css
+++ b/static/css/campus/base.css
@@ -210,6 +210,10 @@ body {
   border-color: #8BBF82 !important;
 }
 
+.modal-content {
+  overflow: hidden;
+}
+
 .modal-header {
   color: white;
   text-align: center;
